ARCHER-240 increase tests minimum percentages