@@ -6,6 +6,8 @@ import com.bbva.common.producers.records.GenericRecordImpl;
 import com.bbva.common.producers.records.SpecificRecordImpl;
 import com.bbva.common.util.PowermockExtension;
 import com.bbva.common.utils.headers.RecordHeaders;
+import org.apache.avro.generic.GenericRecord;
+import org.apache.avro.specific.SpecificRecord;
 import org.apache.kafka.common.utils.Bytes;
 import org.junit.gen5.api.Assertions;
 import org.junit.gen5.api.DisplayName;
@@ -107,9 +109,17 @@ public class CachedProducerTest {
         final ApplicationConfig configuration = new AppConfiguration().init();
         final CachedProducer producer = new CachedProducer(configuration);
 
-        producer.add(new PRecord<>("test", new Integer(1), new Long(1), new RecordHeaders()), null);
-        producer.add(new PRecord<>("test", new Bytes("bytes".getBytes()), ByteBuffer.allocate(1), new RecordHeaders()), null);
-        producer.add(new PRecord<>("test", "bytes".getBytes(), Boolean.TRUE, new RecordHeaders()), null);
+        producer.add(new PRecord<>("test", Integer.valueOf(1), Long.valueOf(1), new RecordHeaders()), null);
+        producer.add(new PRecord<>("test1", new Bytes("bytes".getBytes()), ByteBuffer.allocate(1), new RecordHeaders()), null);
+        producer.add(new PRecord<>("test2", ByteBuffer.allocate(1), new Bytes("bytes".getBytes()), new RecordHeaders()), null);
+        producer.add(new PRecord<>("test4", new Double(0), "bytes".getBytes(), new RecordHeaders()), null);
+
+        producer.remove((new PRecord<>("test5", "bytes", new Double(0), new RecordHeaders())), Double.class, null);
+        producer.remove((new PRecord<>("test6", "bytes", ByteBuffer.allocate(1), new RecordHeaders())), ByteBuffer.class, null);
+        producer.remove((new PRecord<>("test7", "bytes", new Bytes("bytes".getBytes()), new RecordHeaders())), Bytes.class, null);
+        producer.remove((new PRecord<>("test8", "bytes", new SpecificRecordImpl(), new RecordHeaders())), SpecificRecord.class, null);
+        producer.remove((new PRecord<>("test9", "bytes", new GenericRecordImpl(), new RecordHeaders())), GenericRecord.class, null);
+
         final Future mockedFuture = producer.add(new PRecord<>("test", new GenericRecordImpl(), new SpecificRecordImpl(), new RecordHeaders()), null);
 
         Assertions.assertAll("producer",
